--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,12 @@
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
 }
 
 body {
     padding: 2rem;
-    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
 
 .header {
@@ -20,23 +21,6 @@ body {
     font-size: 2rem;
 }
 
-.filter-element {
-    border: black solid;
-
-}
-
-.chip:link,
-.chip:visited {
-    text-decoration: none;
-    font-size: 2rem;
-    vertical-align: middle;  /* Align with the input text */
-    line-height: 2rem;  /* Ensure consistent line-height */
-    padding: 0.5rem;
-}
-
-input[type="text"] {
-    font-size: 2rem;
-    vertical-align: middle;  /* Align with links */
-    padding: 0.5rem;
-    line-height: 2rem;  /* Ensure consistent line-height */
+#note-content {
+    font-family: inherit;
 }
